--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "postcss-import": "^15.0.0",
+    "postcss-nesting": "^10.2.0",
+    "postcss-preset-env": "^7.8.2",
+    "postcss-reporter": "^7.0.5"
   }
 }
