--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
