--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@types/node": "18.8.3",
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
@@ -24,6 +26,7 @@
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
     "postcss-preset-env": "^7.8.2",
-    "postcss-reporter": "^7.0.5"
+    "postcss-reporter": "^7.0.5",
+    "typescript": "4.8.4"
   }
 }
