--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.34.3",
+    "@react-three/fiber": "^8.8.9",
     "clsx": "^1.2.1",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
@@ -16,6 +18,8 @@
     "react-dom": "18.2.0",
     "swiper": "^8.4.3",
     "tailwindcss": "^3.1.8",
+    "three": "^0.145.0",
+    "three-gltf-loader": "^1.111.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
