--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,7 @@
         "statusBar.foreground": "#15202b",
         "statusBarItem.hoverBackground": "#ff578f",
         "statusBarItem.remoteBackground": "#ff8ab1",
-        "statusBarItem.remoteForeground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#ffbdd3",
-        "titleBar.activeBackground": "#ff8ab1",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#ff8ab199",
-        "titleBar.inactiveForeground": "#15202b99"
+        "statusBarItem.remoteForeground": "#15202b"
     },
     "peacock.color": "#ff8ab1",
     "editor.tabCompletion": "on",
