--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
     "three-gltf-loader": "^1.111.0",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
