--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,19 @@
         "statusBar.foreground": "#15202b",
         "statusBarItem.hoverBackground": "#ff578f",
         "statusBarItem.remoteBackground": "#ff8ab1",
-        "statusBarItem.remoteForeground": "#15202b"
+        "statusBarItem.remoteForeground": "#15202b",
+        "activityBar.activeBackground": "#ffbdd3",
+        "activityBar.background": "#ffbdd3",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#359f00",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#ffbdd3",
+        "titleBar.activeBackground": "#ff8ab1",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#ff8ab199",
+        "titleBar.inactiveForeground": "#15202b99"
     },
     "peacock.color": "#ff8ab1",
     "editor.tabCompletion": "on",
