--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "swiper": "^8.4.3",
     "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
