--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.9",
     "clsx": "^1.2.1",
