vercel analitycs and form language update

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.4.1",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.9",
+    "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
