pivot to personal portfolio

--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@formspree/react": "^2.4.1",
+    "@headlessui/react": "^1.7.17",
+    "@nextui-org/react": "^2.2.9",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.9",
+    "@swc/helpers": "^0.5.3",
     "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
+    "flowbite-react": "^0.7.0",
+    "framer-motion": "^10.6.8",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "semantic-ui-react": "^2.1.4",
     "swiper": "^8.4.3",
+    "tailwind-variants": "^0.1.18",
     "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
     "three-gltf-loader": "^1.111.0",
