--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "react-use-gesture": "^9.1.3",
     "semantic-ui-react": "^2.1.4",
     "swiper": "^8.4.3",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
     "three-gltf-loader": "^1.111.0",
+    "three-orbitcontrols": "^2.110.3",
     "typewriter-effect": "^2.19.0",
     "vanta": "^0.5.24"
   },
